Gretchen/refactor lager 2 (#853)
* ADD more work to the warehouse page

* ADD more work to the warehouse page

* ADD more work to the warehouse page

* ADD more work to the warehouse page

* ADD gifs to the warehouse page

--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -5,26 +5,42 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 08.07.2022
+zuletzt bearbeitet 25.07.2022
 ////
 
-Auf dieser Seite werden die Einstellungs- und Bearbeitungsmöglichkeiten für Lager beschrieben.
-Du erfährst, wie du ein neues Lager anlegst, um in deinem plentymarkets System dein Lager 1:1 nachzubilden.
-Außerdem lernst du, wie du Box-Regale als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen] erstellst.
+Diese Seite beschreibt, wie du dein Lager 1:1 in plentymarkets abbildest.
+Indem du deine Lagerstruktur angibst, kannst du später:
 
-* Eine optimale Einrichtung des Lagers ist entscheidend für den Versandprozess und hilft dir, Zeit zu sparen.
-Nimm dir also vorab genügend Zeit, um dein Lager sinnvoll und wegeoptimiert abzubilden.
-* Um alle Tools, z.B. auch das Tool link:https://marketplace.plentymarkets.com/plugins/externe-tools/plentyBase_5053/[plentyBase^], optimal zu nutzen, sollte jeder Lagerort mit einem *Label* mit Barcode versehen werden.
+* sehen, wo jeder Artikel gelagert ist.
+So verschwendest du keine unnötige Zeit mit der Suche, wenn du Waren empfängst oder kommissionierst.
+* wegeoptimierte Picklisten erstellen.
+Diese führen deine Lagerist:innen optimal durch den Pickvorgang.
+* deine Lagerorte mit scanbaren Labels versehen.
+Durch das Scannen von Waren und Lagerorten verhinderst du Fehler, die sonst bei der Kommissionierung auftreten könnten.
+
+video::271224764[vimeo]
+
+//Außerdem lernst du, wie du Box-Regale als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen] erstellst.
+
+//* Eine optimale Einrichtung des Lagers ist entscheidend für den Versandprozess und hilft dir, Zeit zu sparen.
+//Nimm dir also vorab genügend Zeit, um dein Lager sinnvoll und wegeoptimiert abzubilden.
+//* Um alle Tools, z.B. auch das Tool link:https://marketplace.plentymarkets.com/plugins/externe-tools/plentyBase_5053/[plentyBase^], optimal zu nutzen, sollte jeder Lagerort mit einem *Label* mit Barcode versehen werden.
 
 [IMPORTANT]
 .Mindestens ein Lager wird zur Bestandspflege und für Aufträge benötigt
 ====
-Jedes plentymarkets System hat zu Beginn 2 Beispiellager: ein Vertriebslager (KS Sales) und ein zugehöriges Reparaturlager (KS Repair). Diese Lager kannst du umbenennen und weiter nutzen oder löschen und eigene Lager anlegen. Du benötigst mindestens ein Lager in deinem System, um Wareneingänge zu buchen und Bestände zu pflegen. Ohne ein Lager kannst du also keine Bestände verwalten. Eingehende Aufträge werden je nach Artikelverfügbarkeit einem Lager zugeordnet.
+Jedes plentymarkets System hat zu Beginn 2 Beispiellager: ein Vertriebslager (KS Sales) und ein zugehöriges Reparaturlager (KS Repair).
+Diese Lager kannst du umbenennen und weiter nutzen oder löschen und eigene Lager anlegen.
+Du benötigst jedoch mindestens ein Lager in deinem System, um Wareneingänge zu buchen und Bestände zu pflegen.
+Ohne ein Lager kannst du keine Bestände verwalten.
 ====
 
-Nachdem dein Lager fertig angelegt ist, wirst du deine Varianten einem Lagerort zuordnen und den ersten Wareneingang für eine Variante buchen.
-Somit wird auch Bestand im System vorhanden sein.
+//Eingehende Aufträge werden je nach Artikelverfügbarkeit einem Lager zugeordnet.
 
+//Nachdem dein Lager fertig angelegt ist, wirst du deine Varianten einem Lagerort zuordnen und den ersten Wareneingang für eine Variante buchen.
+//Somit wird auch Bestand im System vorhanden sein.
+
+////
 [#100]
 == Lager planen
 
@@ -49,9 +65,12 @@ In jedem Lager, egal ob Beispiellager oder neu erstelltes Lager, werden dir im L
 |===
 
 Eine wegeoptimierte Pickliste ergibt sich durch die Position der Lagerorte. Ob eine Dimension die Position von Lagerorten beeinflusst, bestimmst du durch deine Einstellung. Eine Pickliste beginnt mit der niedrigsten Position und wird aufsteigend sortiert.
+////
 
 [#200]
 == Neues Lager anlegen
+
+In diesem Schritt erstellst du den anfänglichen Datensatz für das Lager.
 
 //Das Einrichten eines Lagers gliedert sich in 3 grundsätzliche Schritte. Zunächst gibst du allgemeine Daten wie den Namen und Zweck des Lagers an. Anschließend pflegst du weitere allgemeine Daten, wie die Adresse des Lagers, ein. Im 2. Schritt richtest du Dimensionen ein, in die du dein Lager unterteilen möchtest. Im letzten Schritt generierst du schließlich deine Lagerorte.
 
@@ -139,6 +158,8 @@ Hier werden Artikel vorübergehend gelagert, während sie von einem Transportmit
 [#300]
 === Einstellungen
 
+In diesem Schritt speicherst du allgemeine Informationen zum Lager, wie zum Beispiel die Adresse.
+
 . Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Einstellungen*.
 . Passe die Einstellungen an deine Bedürfnisse an.
 . *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
@@ -201,12 +222,12 @@ Wähle das Land aus der Dropdown-Liste aus.
 *_Hinweis_*:
 Hier stehen die Länder zur Auswahl, die als Lieferländer unter xref:fulfillment:versand-vorbereiten.adoc#100[Einrichtung » Aufträge » Versand » Optionen » Tab: Lieferländer] aktiviert wurden.
 
-| *Straße* +
-*Hausnummer* +
-*Postleitzahl* +
-*Stadt* +
-*Telefon* +
-*Fax* +
+| *Straße*; +
+*Hausnummer*; +
+*Postleitzahl*; +
+*Stadt*; +
+*Telefon*; +
+*Fax*; +
 *E-Mail*
 |Wo befindet sich das Lager?
 Gib die Kontaktdaten in diese Felder ein.
@@ -256,15 +277,51 @@ In diesem Fall wird der Einkaufspreis bei jedem Wareneingang berechnet, jedoch n
 
 !===
 
-| *Verfügbarkeit mit Bestand* +
+| *Verfügbarkeit mit Bestand*; +
  *Verfügbarkeit ohne Bestand*
-|Hiermit wird festgelegt, welche Verfügbarkeit angezeigt wird, wenn Bestand vorhanden bzw. nicht vorhanden ist. Diese Einstellung ist dominant gegenüber dem Symbol, das im Tab *Einstellungen* einer Variante für die *Verfügbarkeit* eingestellt ist. Wichtig ist jedoch, dass im Tab *Einstellungen* einer Variante die Einstellungen *Anzeige im Webshop: Automatisch verfügbar wenn Netto-WB positiv; Automatisch nicht verfügbar wenn kein Netto-WBVerfügbar* ebenfalls gewählt wurden. +
-Nach jeder Änderung muss der Warenbestand neu berechnet werden. Diese Neuberechnung erfolgt im Menü xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Waren » Warenbestände] durch einen Klick auf *Warenbestände neu berechnen*. +
-Es werden die Verfügbarkeitssymbole angezeigt, die im Menü *Einrichtung » Artikel » Verfügbarkeit* im Bereich *Webshop-Symbol* hinterlegt sind.
+|Gib die durchschnittliche Lieferzeit deiner Varianten an.
+Dies ist die dynamische Einstellung.
+
+---
+
+*_Hintergrund-Info_*:
+In plentymarkets kann die Angabe zur Verfügbarkeit entweder statisch oder dynamisch sein.
+
+* *Statisch*: Im Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit* wählst eine Abfertigungszeit, die immer für die Variante gilt, z.B. Versand innerhalb von 3 Tagen.
+* *Dynamisch*: Hier in diesem Menü wählst eine Abfertigungszeit für den Fall, dass die Variante auf Lager ist, z.B. Versand innerhalb von 3 Tagen.
+Und du wählst eine zweite Abfertigungszeit für den Fall, dass die Variante nicht auf Lager ist, z.B. Versand innerhalb von 2 Wochen.
+
+Die dynamische Einstellung hat Vorrang vor der statischen Einstellung.
+Wenn du also in beiden Menüs eine Angabe machst, dann wird die dynamische Verfügbarkeit genommen.
+
+---
+
+Falls die Variante mehreren Lagern mit unterschiedlichen Verfügbarkeitsstufen zugeordnet ist, dann nimmt plentymarkets immer die beste Option. Beispiel: Der Artikel ist in Lager A und B verfügbar.
+
+* Lager A hat eine Verfügbarkeit von 2 Tagen.
+* Lager B hat eine Verfügbarkeit von 5 Tagen.
+
+In diesem Fall wird das Lager A verwendet, da es die bessere Verfügbarkeit bietet.
+
+---
+
+*_Zusätzliche Einstellungen_*:
+
+* In plentymarkets stehen zehn Verfügbarkeitsstufen zur Auswahl.
+Im Menü *Einrichtung » Artikel » Verfügbarkeit* legst du fest, was die einzelnen Verfügbarkeitsstufen bedeuten.
+xref:artikel:verfuegbarkeit.adoc#100[Weitere Informationen].
+* Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit* und stelle sicher, dass die Einstellungen *Anzeige im Webshop: Automatisch verfügbar, wenn Netto-WB positiv* und *Anzeige im Webshop: Automatisch nicht verfügbar, wenn kein Netto-WB* auch gewählt wurden (icon:check-square[role="blue"]).
+* Nach jeder Änderung der Verfügbarkeit muss der Warenbestand neu berechnet werden.
+Öffne dazu das Menü *Waren » Warenbestände* und klicke auf terra:execute[role="darkGrey"] *Warenbestände neu berechnen*.
 
 | *Verfügbar für Auftragsherkünfte (bei automatischer Lagerauswahl)*
-|Hier wählst du die xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte], für die das Lager verfügbar sein soll. Geht über eine der ausgewählten Auftragsherkünfte ein Auftrag ein, wird dieses Lager bei der automatischen Lagerauswahl zugeordnet. +
-*_Wichtig:_* Die Einstellungen, die du bei der Option *Automatische Lagerauswahl* im Menü *xref:auftraege:grundeinstellungen.adoc#[Einrichtung » Aufträge » Einstellungen]* vornimmst, bauen auf dieser Einstellung auf. Das heißt, dass zuerst die aktivierte Auftragsherkunft geprüft wird und erst dann deine Einstellungen zur automatischen Lagerauswahl zum Tragen kommen.
+|Wähle die xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte], für die das Lager verfügbar sein soll.
+Geht ein Auftrag von eine der gewählten Auftragsherkünfte ein, wird dieses Lager bei der automatischen Lagerauswahl zugeordnet.
+
+*_Hinweis_*:
+Die Einstellungen, die du im Menü *Einrichtung » Aufträge » Einstellungen » Automatische Lagerauswahl* vornimmst, bauen auf dieser Einstellung auf.
+Das heißt, dass zuerst die aktivierte Auftragsherkunft geprüft wird und erst dann deine Einstellungen zur automatischen Lagerauswahl zum Tragen kommen.
+xref:auftraege:grundeinstellungen.adoc#[Weitere Informationen].
 
 | *Notiz*
 |Hier kannst du Notizen eingeben, die du zusätzlich als Informationen zum Lager speichern möchtest.
@@ -273,172 +330,138 @@ Es werden die Verfügbarkeitssymbole angezeigt, die im Menü *Einrichtung » Art
 |Der xref:warenwirtschaft:inventur-vornehmen.adoc#500[Inventur-Modus] friert den Warenbestand des Lagers für die Dauer der Inventur ein.
 |===
 
-[#800]
-=== Label
-
-Um Waren beim Einlagern schnell auf einen Lagerort zu buchen, ist es hilfreich, die Waren und den Lagerort zu scannen. Versehe hierfür deine Lagerorte mit scanbaren Labels. Bild 1 zeigt z.B. die Einstellungen für ein seitenbreites Label:
-
-.Label erstellen
-image::warenwirtschaft:label-einstellungen.png[]
-
-[.instruction]
-Labels für Lagerorte erstellen:
-
-. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Label*.
-. Nimm die Einstellungen vor.
-. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
-→ Das Label wird erstellt.
-
-[TIP]
-.Nullpunkt des Koordinatensystems
-====
-Der Nullpunkt des Koordinatensystems liegt oben links. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten.
-
-Experimentiere mit den Einstellungen, bis das Label deinen Vorstellungen entspricht.
-====
-
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Seite*
-|Gib die Breite und Höhe (in mm) des Papierformats ein, das für den Druck genutzt wird.
-
-| *Seitenrand*
-|Gib die Maße der Seitenränder ein. Diese bestimmen den Nullpunkt für die Platzierung der Labels auf der Seite.
-
-| *Label*
-|Gib die Breite und Höhe (in mm) des Lagerortlabels ein.
-
-|*Zeichensatz*
-|Wähle einen Zeichensatz aus der Dropdown-Liste.
-
-| *Rahmen zeichnen*
-|Aktiviere die Checkbox, um das Label einzurahmen.
-
-| *Zeilen pro Seite*
-|Gib die Anzahl der Zeilen pro Seite ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels auf einer Seite untereinander dargestellt werden. Die Höhe der Labels hat zusätzlich Einfluss auf die Anzahl, die untereinander dargestellt werden kann.
-
-| *Zeilenabstand*
-|Gib den Zeilenabstand (in mm) ein. Dieser bestimmt den Abstand zwischen den untereinander angeordneten Labels.
-
-| *Spalten pro Zeile*
-|Gib die Anzahl der Spalten pro Zeile ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels nebeneinander dargestellt werden. Achte darauf, dass die Breite der Labels zulässt, dass die Labels entsprechend der Anzahl nebeneinander dargestellt werden.
-
-| *Spaltenabstand*
-|Gib den Spaltenabstand ein. Dieser bestimmt den Abstand zwischen nebeneinander angeordneten Labels.
-
-| *Lagerort-Name*
-|Gib die Koordinaten für den Druck des Lagerort-Namens ein.
-
-| *Lagerort-ID*
-|Gib die Koordinaten für den Druck der Lagerort-ID ein.
-
-| *Lagerort-Position*
-|Gib die Koordinaten für den Druck der Lagerort-Position ein.
-
-|*Lagerort-Dimensionen*
-|Gib die Koordinaten für den Druck der Dimensionen des Lagers ein. Dies kann z.B. der Name des Regalbodens oder der Name des Regals sein.
-
-| *Barcode Lagerort*
-|Gib die Koordinaten für den Druck des Lagerort-Barcodes sowie die Breite und Höhe in mm ein. +
-Mit der Einstellung *Darstellung Wert* kann der Barcode zusätzlich als alphanumerische Zeichenfolge dargestellt werden. +
-*unterhalb* = Die Zeichenkette wird unterhalb des Barcodes dargestellt. +
-*innerhalb* = Die Zeichenkette wird innerhalb des Barcodes dargestellt. +
-*nicht anzeigen* = Die Zeichenkette wird nicht dargestellt.
-|===
-
-[#700]
-=== Box-Regale
-
-Box-Regale dienen als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen]. Box-Regale stehen nur in xref:automatisierung:aktionen.adoc#140[Prozessen] zur Verfügung.
-
-[TIP]
-.Maximale Boxenanzahl
-====
-Du kannst maximal 100 Boxen pro Box-Regal einrichten.
-====
-
-[.instruction]
-Box-Regal einrichten:
-
-. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Box-Regale*.
-. Klicke auf *Neues Box-Regal*.
-. Nimm die Einstellungen vor.
-. *Speichere* (terra:save[role="green"]) die Einstellungen. +
-→ Das Box-Regal wird angelegt.
-
-[cols="1,3"]
-|===
-|Einstellung |Erläuterung
-
-| *Bezeichnung*
-|Gib einen Namen für das Box-Regal ein.
-
-| *Start-Box*
-|Gib die Startnummer der ersten Box des Box-Regals ein.
-
-| *End-Box*
-|Gib die abschließende Nummer der letzten Box des Box-Regals ein.
-|===
-
 [#400]
 === Dimensionen
 
-Richte Dimensionen ein, um dein Lager grundlegend in Elemente zu gliedern. Mindestens eine Dimension wird zum Generieren von Lagerorten benötigt. Diese Dimension kann z.B. eine Halle sein. Du kannst bis zu 10 Dimensionen für jedes Lager erstellen. Aus den Dimensionen ergeben sich dann die Ebenen eines Lagers. +
-Überlege vorab, welche Dimensionen du erstellen möchtest und beginne beim Anlegen mit der kleinsten bzw. spezifischsten Dimension (z.B. Regalboden). Diese wird dann das höchste Level erhalten (z.B. bei 4 erstellten Dimensionen Level 4). Beachte also, dass die Dimension mit dem höchsten Level die kleinste Dimension im Lager sein wird. Erstelle die Dimensionen deshalb der Größe nach aufsteigend (z.B. Regalboden (Level 4) > Regal (Level 3) > Zone (Level 2) > Lagerhalle (Level 1)).
+In diesem Schritt gibst du an, aus welchen Strukturelementen sich dein Lager zusammensetzt.
+Das heißt, du zählst die verschiedenen Ebenen auf, wie zum Beispiel Halle, Zone, Gang, Regal und Regalboden.
 
-//IMPORTANT MESSAGE IST DOPPELT
-[IMPORTANT]
-.Beispieldimensionen übernehmen oder löschen
-====
-In jedem Lager werden im Layout 2 Beispieldimensionen angezeigt. Diese Dimensionen sind nicht gespeichert. Du kannst die Dimensionen übernehmen, umbenennen oder löschen. Zum Erstellen von Lagerorten benötigst du jedoch mindestens eine Dimension.
-====
+[discrete]
+==== Dimensionen planen
 
-[.instruction]
-Dimension erstellen:
+Es kann hilfreich sein, die verschiedenen Dimensionen vorab auf einem Blatt Papier zu skizzieren.
 
-. Öffne das Menü *Einrichtung » Waren » Lager*.
-. Wähle ein Lager.
-. Klicke auf *Dimensionen*. +
-→ Die Übersicht wird geöffnet.
-. Gib einen Namen für die Dimension ein.
-. Nimm weitere optionale Einstellungen vor.
-. Klicke am rechten Rand auf *Neue Dimension hinzufügen* (icon:add[]). +
-→ Eine weitere Dimension kann nun hinzugefügt werden. Folge dazu wieder den Schritten 4 bis 6.
-. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
-→ Die Dimensionen werden erstellt.
-
-Eine neue Dimension wird als größte Dimension hinzugefügt. Wenn du weitere Dimensionen hinzufügst, sind diese übergeordnet, also größer. Beginne deshalb mit der kleinsten Dimension.
+image::warenwirtschaft:lager-dimension-planen.gif[]
 
 [TIP]
-.Für Lagerort mindestens eine Dimension benötigt
+.Wie viele Dimensionen soll ich wählen?
 ====
-Solange es keine Lagerorte gibt, können alle Dimensionen gelöscht werden. Bestehen Lagerorte, muss es mindestens eine Dimension geben.
+In diesem Beispiel sind die Dimensionen Halle, Regal und Boden.
+Du kannst aber frei wählen, welche Dimensionen den Bedürfnissen deines Unternehmens entsprechen.
+Vielleicht ist dein Lager nur eine kleine Garage.
+Vielleicht ist es ein riesiger Komplex, der in zahlreiche Ebenen unterteilt ist.
+Wichtig ist nur, dass du folgende Punkte beachtest:
+
+* Mindestens eine Dimension wird benötigt.
+* Es können bis zu 10 Dimensionen pro Lager erstellt werden.
+* Die Lagerorte selbst sind keine Dimensionen.
+Lagerorte werden in einem späteren Kapitel näher erläutert.
 ====
 
-[cols="1,3"]
+[discrete]
+==== Dimensionen anlegen
+
+Sobald du deine Dimensionen fertig skizziert hast, kannst du sie in plentymarkets anlegen.
+Erstelle zuerst die kleinste, d.h. die spezifischste Dimension, dann die zweitkleinste, usw.
+
+//Beginne beim Anlegen mit der kleinsten bzw. spezifischsten Dimension (z.B. Regalboden). Diese wird dann das höchste Level erhalten (z.B. bei 4 erstellten Dimensionen Level 4). Beachte also, dass die Dimension mit dem höchsten Level die kleinste Dimension im Lager sein wird. Erstelle die Dimensionen deshalb der Größe nach aufsteigend (z.B. Regalboden (Level 4) > Regal (Level 3) > Zone (Level 2) > Lagerhalle (Level 1)).
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Dimensionen*.
+Das Menü ist in drei Bereiche unterteilt:
+* *Vorschau Lagerortname*:
+Hier siehst du, wie der Lagerort des Artikels angezeigt wird, z.B. auf Etiketten oder Picklisten, wenn du die Einstellungen so beibehältst, wie sie derzeit sind.
+* *Dimension hinzufügen*:
+Hier kannst du weitere Dimensionen nach Bedarf hinzufügen.
+* *Lager-Dimensionen*:
+Hier siehst du die Dimensionen, die bereits erstellt wurden.
+Du kannst die Einstellungen nach Bedarf ändern.
+. Zwei Beispiel-Dimensionen sind bereits vorhanden: *Regal* und *Boden*.
+Du kannst die Dimensionen übernehmen, abändern oder löschen.
+. Erstelle zuerst die kleinste, d.h. die spezifischste Dimension, dann die zweitkleinste, usw.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+
+//In der Vorschau siehst du, wie deinem Mitarbeiter der eigentliche Platz des Artikels angezeigt, also wie der Lagerortname dann aussehen wird. Also zum Beispiel "Artikel liegt auf Regal 1, Boden 1" + der Lagerort, den wir später erstellen werden.
+
+image::warenwirtschaft:lager-dimensionen.gif[]
+
+[cols="1,3a"]
 |===
 |Einstellung |Erläuterung
 
-| *Name*
-|Der Name ist ein Pflichtfeld. Verwende maximal 56 Zeichen. Du kannst Zahlen, Buchstaben und Sonderzeichen nutzen.
+| *Level*
+|Neue Dimensionen erhalten automatisch ein Level, wenn sie erstellt werden.
+Das Level dient als Referenz und kann nicht geändert werden.
+
+*_Wichtig_*:
+Lege die Dimensionen so an, dass die kleinste Dimension das höchste Level hat.
+Das heißt, erstelle zuerst die kleinste Dimension, dann die zweitkleinste, usw.
+
+*_Beispiel_*:
+Da ich die Dimensionen Halle, Regal und Boden haben möchte, stelle ich sicher, dass die Levels am Ende so aussehen:
+
+* *Halle* = Level 1 (die größte Dimension)
+* *Regal* = Level 2 (die zweitgrößte Dimension)
+* *Boden* = Level 3 (die kleinste Dimension)
+
+| *Name* +
+([red]#Pflichtfeld#)
+|Gib einen Namen für die Dimension ein.
+
+*_Hinweis_*:
+Verwende maximal 56 Zeichen.
+Du kannst Zahlen, Buchstaben und Sonderzeichen nutzen.
 
 | *Präfix*
-|Gib ein Präfix ein. Möglich sind bis zu 3 Zeichen. Du kannst Zahlen, Buchstaben und Sonderzeichen nutzen. Das Präfix wird vor die Ebenennummerierung gestellt. Wenn die Dimension im Lagerortnamen berücksichtigt wird, wird das Präfix auch im Lagerortnamen angezeigt.
+|Gib ein Präfix für die Dimension ein.
+
+*_Anwendungsfall_*:
+Das Präfix erscheint vor der Ebenen-Nummer.
+Wenn du die Option *Im Namen anzeigen* wählst (icon:check-square[role="blue"]), wird das Präfix im Lagerortnamen angezeigt.
+
+*_Hinweis_*:
+Möglich sind bis zu 3 Zeichen.
+Du kannst Zahlen, Buchstaben und Sonderzeichen nutzen.
 
 | *Trenner*
-|Wähle ein Trennzeichen, das hinter der Dimension angezeigt wird.
+|Welches Trennzeichen soll nach der Dimension angezeigt werden?
+Wähle dieses Trennzeichen aus der Dropdown-Liste aus.
 
+//add more info
 | *Position für Laufweg berücksichtigen*
-|Wähle, ob die Position der Dimension für den Laufweg berücksichtigt werden soll oder nicht. +
-*Häkchen gesetzt* = Aktiv, sodass die Position der Dimension für den Laufweg berücksichtigt wird. +
-*Kein Häkchen* = Inaktiv, sodass die Position der Dimension nicht für den Laufweg berücksichtigt wird.
+|Soll die Position der Dimension für den Laufweg berücksichtigt werden?
+
+icon:check-square[role="blue"] = Ja. Die Position der Dimension wird für den Laufweg berücksichtigt.
+
+icon:square-o[role="darkGrey"] = Nein. Die Position der Dimension wird _nicht_ für den Laufweg berücksichtigt.
 
 | *Im Namen anzeigen*
-|Wählen, ob die Dimension im Namen von Lagerorten angezeigt werden soll oder nicht. +
-*Häkchen gesetzt* = Aktiv, sodass die Dimension im Namen von Lagerorten angezeigt wird. +
-*Kein Häkchen* = Inaktiv, sodass die Dimension nicht im Namen von Lagerorten angezeigt wird.
+|Soll diese Dimension im Namen des Lagerorts angezeigt werden?
+
+icon:check-square[role="blue"] = Ja. Die Dimension wird im Namen des Lagerorts angezeigt.
+
+icon:square-o[role="darkGrey"] = Nein. Die Dimension wird _nicht_ im Namen des Lagerorts angezeigt.
+
+| icon:plus[role="darkGrey"]
+|Fügt die neue Dimension zur Liste der Lager-Dimensionen hinzu.
+
+*_Hinweis_*:
+Die Level-Nummern werden dabei automatisch aktualisiert.
+
+| icon:minus[role="darkGrey"]
+|Entfernt eine Dimension aus der Liste der Lager-Dimensionen.
+
+*_Hinweis_*:
+Die Level-Nummern werden dabei automatisch aktualisiert.
+
+---
+
+*_Warum kann ich eine Dimension nicht aus der Liste entfernen?_*
+
+* Falls du noch keine Lagerorte generiert hast, kannst du alle Dimensionen aus der Liste entfernen und von vorne beginnen.
+* Falls du Lagerorte bereits generiert hast, muss es mindestens eine Dimension geben.
+Du musst die Lagerorte also zuerst löschen, bevor du die Dimension aus der Liste entfernen kannst.
+xref:warenwirtschaft:lager-einrichten.adoc#528[Weitere Informationen zum nachträglichen Löschen einer Dimension].
+
 |===
 
 [#500]
@@ -446,13 +469,8 @@ Solange es keine Lagerorte gibt, können alle Dimensionen gelöscht werden. Best
 
 Generiere Lagerorte, um die tatsächlichen Plätze zum Lagern deiner Ware angeben zu können. Varianten können nur auf konkrete Lagerorte gebucht werden und nicht auf Dimensionen. Auch das Generieren vieler Lagerorte auf einmal ist ganz einfach. Sobald Lagerorte generiert sind, werden sie nach dem Laufweg sortiert.
 
-[.instruction]
-Lagerorte generieren:
-
-. Öffne das Menü *Einrichtung » Waren » Lager*.
-. Wähle ein Lager.
-. Klicke auf *Lagerorte*. +
-. Klicke oben auf *Neuen Lagerort hinzufügen* (icon:add[]).
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte*.
+. Klicke auf icon:plus[role="darkGrey"] *Neue Lagerorte anlegen*.
 . Nimm die Einstellungen vor.
 . *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
 → Eine Vorschau mit Beispielen der Lagerortnamen wird angezeigt.
@@ -460,7 +478,17 @@ Lagerorte generieren:
 
 Die Lagerorte werden im Hintergrund kontinuierlich generiert. Dir werden schon nach kurzer Zeit die ersten Lagerorte angezeigt, jedoch ist das Generieren noch nicht abgeschlossen. Dir wird eine Erfolgsmeldung angezeigt, wenn das Generieren vollständig abgeschlossen wurde.
 
-[cols="1,2"]
+////
+where should I include this info?
+
+[TIP]
+.Artikel auf mehreren Lagerorten
+====
+Auch für den Fall, dass ein Artikel auf mehreren Lagerorten liegt, hilft die Position, beim Zuweisen den richtigen Lagerort zu wählen.
+====
+////
+
+[cols="1,3a"]
 |===
 |Einstellung |Erläuterung
 
@@ -469,9 +497,9 @@ Die Lagerorte werden im Hintergrund kontinuierlich generiert. Dir werden schon n
 | *Präfix*
 |Das Präfix wird aus den Einstellungen der Dimensionen übernommen und kann dort eingegeben werden. Hier wird es lediglich angezeigt.
 
-| *Von* +
+| *Von*; +
 *Bis*
-a|Gib den Startwert und Endwert für die Dimension ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
+|Gib den Startwert und Endwert für die Dimension ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
 Beispiele für zulässige Start- und Endwerte:
 
 * 1 bis 10
@@ -498,7 +526,7 @@ Gib die Startposition ein. Nur Zahlen sind zulässig.
 | *Präfix*
 |Gib ein Präfix für Lagerorte ein. Standardmäßig ist SL (für Storage Location) voreingetragen. Das Präfix ist kein Pflichtfeld.
 
-| *Lagerorte anlegen von* +
+| *Lagerorte anlegen von*; +
 *Lagerorte anlegen bis*
 a|Gib einen Startwert und Endwert für Lagerorte ein. Zulässig sind Buchstaben und Zahlen sowie einige Kombinationen aus Buchstaben und Zahlen. +
 Beispiele für zulässige Start- und Endwerte:
@@ -624,6 +652,115 @@ A bis AC +
 |A1 bis B1 +
 1A bis 1C
 AA bis CC
+|===
+
+[#800]
+=== Label
+
+Um Waren beim Einlagern schnell auf einen Lagerort zu buchen, ist es hilfreich, die Waren und den Lagerort zu scannen. Versehe hierfür deine Lagerorte mit scanbaren Labels. Bild 1 zeigt z.B. die Einstellungen für ein seitenbreites Label:
+
+.Label erstellen
+image::warenwirtschaft:label-einstellungen.png[]
+
+[.instruction]
+Labels für Lagerorte erstellen:
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Label*.
+. Nimm die Einstellungen vor.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen. +
+→ Das Label wird erstellt.
+
+[TIP]
+.Nullpunkt des Koordinatensystems
+====
+Der Nullpunkt des Koordinatensystems liegt oben links. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten.
+
+Experimentiere mit den Einstellungen, bis das Label deinen Vorstellungen entspricht.
+====
+
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Seite*
+|Gib die Breite und Höhe (in mm) des Papierformats ein, das für den Druck genutzt wird.
+
+| *Seitenrand*
+|Gib die Maße der Seitenränder ein. Diese bestimmen den Nullpunkt für die Platzierung der Labels auf der Seite.
+
+| *Label*
+|Gib die Breite und Höhe (in mm) des Lagerortlabels ein.
+
+|*Zeichensatz*
+|Wähle einen Zeichensatz aus der Dropdown-Liste.
+
+| *Rahmen zeichnen*
+|Aktiviere die Checkbox, um das Label einzurahmen.
+
+| *Zeilen pro Seite*
+|Gib die Anzahl der Zeilen pro Seite ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels auf einer Seite untereinander dargestellt werden. Die Höhe der Labels hat zusätzlich Einfluss auf die Anzahl, die untereinander dargestellt werden kann.
+
+| *Zeilenabstand*
+|Gib den Zeilenabstand (in mm) ein. Dieser bestimmt den Abstand zwischen den untereinander angeordneten Labels.
+
+| *Spalten pro Zeile*
+|Gib die Anzahl der Spalten pro Zeile ein, die gedruckt werden sollen. Die Anzahl bestimmt, wie viele Labels nebeneinander dargestellt werden. Achte darauf, dass die Breite der Labels zulässt, dass die Labels entsprechend der Anzahl nebeneinander dargestellt werden.
+
+| *Spaltenabstand*
+|Gib den Spaltenabstand ein. Dieser bestimmt den Abstand zwischen nebeneinander angeordneten Labels.
+
+| *Lagerort-Name*
+|Gib die Koordinaten für den Druck des Lagerort-Namens ein.
+
+| *Lagerort-ID*
+|Gib die Koordinaten für den Druck der Lagerort-ID ein.
+
+| *Lagerort-Position*
+|Gib die Koordinaten für den Druck der Lagerort-Position ein.
+
+|*Lagerort-Dimensionen*
+|Gib die Koordinaten für den Druck der Dimensionen des Lagers ein. Dies kann z.B. der Name des Regalbodens oder der Name des Regals sein.
+
+| *Barcode Lagerort*
+|Gib die Koordinaten für den Druck des Lagerort-Barcodes sowie die Breite und Höhe in mm ein. +
+Mit der Einstellung *Darstellung Wert* kann der Barcode zusätzlich als alphanumerische Zeichenfolge dargestellt werden. +
+*unterhalb* = Die Zeichenkette wird unterhalb des Barcodes dargestellt. +
+*innerhalb* = Die Zeichenkette wird innerhalb des Barcodes dargestellt. +
+*nicht anzeigen* = Die Zeichenkette wird nicht dargestellt.
+|===
+
+[#700]
+=== Box-Regale
+
+Box-Regale dienen als Zwischenlager für xref:glossar:glossar.adoc#sammelkommissionierung[Sammelkommissionierungen]. Box-Regale stehen nur in xref:automatisierung:aktionen.adoc#140[Prozessen] zur Verfügung.
+
+[TIP]
+.Maximale Boxenanzahl
+====
+Du kannst maximal 100 Boxen pro Box-Regal einrichten.
+====
+
+[.instruction]
+Box-Regal einrichten:
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager wählen] » Untermenü: Box-Regale*.
+. Klicke auf *Neues Box-Regal*.
+. Nimm die Einstellungen vor.
+. *Speichere* (terra:save[role="green"]) die Einstellungen. +
+→ Das Box-Regal wird angelegt.
+
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Bezeichnung*
+|Gib einen Namen für das Box-Regal ein.
+
+| *Start-Box*
+|Gib die Startnummer der ersten Box des Box-Regals ein.
+
+| *End-Box*
+|Gib die abschließende Nummer der letzten Box des Box-Regals ein.
 |===
 
 [#520]
@@ -867,6 +1004,20 @@ Die folgende Liste erhebt keinen Anspruch auf Vollständigkeit. Welche Kombinati
 |===
 
 --
+
+////
+[.collapseBox]
+.*Ablauf*
+--
+
+--
+
+[.collapseBox]
+.*Import*
+--
+
+--
+////
 
 [#faq-ids-finden]
 [.collapseBox]
