Added translations for Check24 formats

--- a/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
@@ -3,26 +3,27 @@
 |===
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
 
-| ID
+| Item number
 | yes
 | * *SKU » SKU* +
 *_Tip:_* Select the order referrer *Check24.de*. In the field *Account*, enter the number `0`. +
 *_Tip:_* Select *Variation » Variation ID* as fallback data field.
 
-| Manufacturer
-| no
-| * *Item » Manufacturer name*
+| Link
+| yes
+| * *Variation »* [Ceres Product URL for the default client (store)] +
 
-| MPNR +
-(Master Part Number Registry)
-| no
-| * *Variation » Model*
+*_Note:_* Only map this field if you have a Ceres shop.
+
+_or_
+
+* *Item text »* [URL path for any other client (store)]
 
 | EAN
 | yes
-| * *Barcode* » [Select barcode of the type *EAN*]
+| * *Barcode »* [Select barcode of the type *GTIN*]
 
-| Name
+| Item name
 | yes
 | * *Item text » Name 1*, language *German*
 
@@ -38,8 +39,8 @@ _or_
 
 * Property of the type *Text*, language *German*
 
-| Description
-| no
+| Item description
+| yes
 | * *Item text » Item text*, language *German*
 
 _or_
@@ -52,39 +53,15 @@ _or_
 | yes
 | * *Default category » Path*
 
-| Price
+| Sales price
 | yes
-| * *Sales price* » Sales price for Check24
-
-| Unit price: sales price (EUR)
-| no
-| * *Unit price » Price » [Select the same sales price as for the data field "Price"]*
-
-| Unit price » Unit
-| no
-| * *Unit price » Unit name » [Select same sales price as for the data field “Price”]*, language *German*
-
-| Unit price: quantity
-| no
-| * *Unit price » Quantity » [Select the same sales price as for the data field "Price"]*
-
-| Link
-| yes
-| * *Variantion » Ceres Product URL* for the default client (store) +
-*_Important:_* Only map this field if you have a Ceres shop.
-
-_or_
-
-* *Item text » URL path* for any other client (store)
-
-| Image URL
-| no
-| * *Image » Variation images » Single image*, image information *Full image URL* +
-_*Allowed file types:*_ jpg, gif, bmp, png
+| * *Sales price »* [Select sales price for Check24]
 
 | Delivery time
-| no
-| * *Variation » Availability*
+| yes
+| The item’s delivery time in working days. +
+
+* *Variation » Availability*
 
 _or_
 
@@ -94,21 +71,100 @@ _or_
 
 * Property linked to variation
 
-| Shipping costs
-| no
-| * *Variation » Default shipping costs*
+| Image URL 1
+| yes
+| * *Image » Variation images » Single image*, Image information *Full image URL* +
 
-| PZN +
-(Pharmazentralnummer/pharmaceutical central number)
+allowed file types: jpg, gif, bmp, png
+
+| Image URL 2-10
+| no
+| additional images +
+
+* *Image » Variation images » Single image*, image information *Full image URL* +
+
+allowed file types: jpg, gif, bmp, png
+
+| Brand
+| no
+| * *Item » Manufacturer name*
+
+| Manufacturer number
+| no
+| * *Variation » Model*
+
+| Colour
+| no
+| * Property of the type *Text* or *Selection*
+
+| Material
+| no
+| * Property of the type *Text* or *Selection*
+
+| Dimensions
 | no
 | * Property linked to variation
 
-| Stock
+| Depth
 | no
-| * *Stock » [Select 1 or more warehouses]* +
-*_Tip:_* Use the data fields in the group *Virtual warehouse* to export the stock quantity sum of all sales warehouses.
+| The item’s depth in mm or cm. +
 
-| Weight
+* Property linked to variation
+
+| Height
+| no
+| The item’s height in mm or cm. +
+
+* *Variation » Height*, size unit *Millimetre* or *Centimetre*
+
+| Width
+| no
+| The item’s width in mm or cm. +
+
+* *Variation » Width*, size unit *Millimetre* or *Centimetre*
+
+| Diameter
+| no
+| The item’s diameter in mm or cm. +
+
+* Property linked to variation
+
+| Weight (g/kg)
 | no
 | * *Variation » Net weight g*
+
+| Maximum capacity (g/kg)
+| no
+| The item’s maximum capacity in g or kg. +
+
+* Property of the type *Whole number* or *Decimal number*
+
+| Care instructions
+| no
+| * Property of the type *Text*
+
+| Scope of supply
+| no
+| * Property of the type *Text*
+
+| Delivery condition
+| no
+| * Property of the type *Text* or *Selection*
+
+| Style
+| no
+| The item’s style, for example “cottage style” or “Scandinavian”. +
+
+* Property of the type *Text* or *Selection*
+
+| Model
+| no
+| * *Variation » Model*
+
+| Series
+| no
+| The series of the item, for example for children’s rooms. +
+
+* Property of the type *Text* or *Selection*
 |===
+
