--- a/docs/en-gb/modules/markets/partials/check24offer-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24offer-recommended-mappings.adoc
@@ -1,23 +1,42 @@
 [[table-recommended-mappings-offer]]
 [cols="2,1,4a"]
-|====
+|===
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
 
-| ID
+| Item number
 | yes
 | * *SKU » SKU* +
 *_Tip:_* Select the order referrer *Check24.de*. In the field *Account*, enter the number `0`. +
 *_Tip:_* Select *Variation » Variation ID* as fallback data field.
 
+| Item name
+| yes
+| * *Item text » Name 1*, language *German*
+
+_or_
+
+* *Item text » Name 2*, language *German*
+
+_or_
+
+* *Item text » Name 3*, language *German*
+
+_or_
+
+* Property of the type *Text*, language *German*
+
+| EAN
+| yes
+| * *Barcode »* [Select barcode of the type *GTIN*]
+
 | Stock
-| no
+| yes
 | * *Stock » [Select 1 or more warehouses]* +
 *_Tip:_* Use the data fields in the group *Virtual warehouse* to export the stock quantity sum of all sales warehouses.
 
-| Link
+| Sales price
 | yes
-| *URL path* of the item depending on
-the selected client
+| * *Sales price »* [Select sales price for Check24]
 
 | Delivery time
 | yes
@@ -35,46 +54,76 @@ _or_
 | no
 | * *Variation » Default shipping costs*
 
-| Name
-| yes
-| * *Item text » Name 1*, language *German*
-
-_or_
-
-* *Item text » Name 2*, language *German*
-
-_or_
-
-* *Item text » Name 3*, language *German*
-
-_or_
-
-* Property of the type *Text*, language *German*
-
-| Variation ID
-| no
-| * *Variation » Variation ID*
-
 | Delivery mode
 | no
 | * Property of the type *Selection*
 
 *_Possible values:_*
 
-* `spedition` (shipping company)
-* `paket` (ensured package)
-* `warensendung` (non-registered small package)
+* `Spedition` (shipping company)
+* `Bundle`
+* `Warensendung` (non-registered small package)
+* `Briefsendung` (Mail)
+
+| Variation ID
+| yes
+| This data field is assigned automatically.
+
+| Availability
+| no
+| The item’s availability status. +
+
+* Property of the type *Text* or *Selection* +
+
+allowed values: `auf Lager` (in stock), `nicht auf Lager` (not in stock)
+
+| RRP
+| no
+| * *Sales price »* [Select sales price of the type *RRP*]
+
+| Category path
+| no
+| * *Default category » Path*
+
+| Link
+| no
+| The *URL path* of the item depending on the chosen client.
+
+| Item description
+| no
+| * *Item text » Item text*, language *German*
+
+_or_
+
+* Property of the type *Text*, language *German*
+
+| Minimum price
+| no
+| The minimum price defines the lowest price which you are willing to accept. +
+
+* *Sales price »* [Select sales price for Check24]
+
+| Brand
+| no
+| * *Item » Manufacturer name*
+
+| Image URL 1
+| no
+| * *Image » Variation images » Single image*, Image information *Full image URL*
+
 | 2 men handling
 | no
 | If shipping company delivery: delivery to place of installation?
 
 * Property of the type *Character string*
+
 *_Possible values:_*
 
 * `ja` (yes) = offered for free
 * `no` (nein) = not offered
 * Additional costs as a decimal number, for example `39.99` = Price for this service
-| installation service
+
+| Installation service
 | no
 | * Property of the type *Selection*
 
@@ -82,6 +131,7 @@ _or_
 
 * `ja` (yes)
 * `no` (nein)
+
 | Removal of old item
 | no
 | * Property of the type *Selection*
@@ -90,6 +140,7 @@ _or_
 
 * `ja` (yes)
 * `no` (nein)
+
 | Removal of packaging
 | no
 | * Property of the type *Selection*
@@ -98,26 +149,27 @@ _or_
 
 * `ja` (yes)
 * `no` (nein)
+
 | IDs of available services
 | no
 | Do not map a plentymarkets data field.
 
-| Logistics provider
+| Shipping service provider
 | no
 | * Property of the type *Text* +
-  *_Example:_* `DHL`
+  *_Examples:_* `DHL`, `DPD`
 
 | Customs tariff number
 | no
 | * *Variation » Customs tariff number*
 
-| Shipping costs for change of mind returns
+| Return shipping costs
 | no
 | * Property of the type *Decimal number* to enter the price +
-  *_Example:_* `39.99`
+  *_Example:_* `3.99`
 
 | Curbside disposal of old device
 | no
 | * Property of the type *Character string* to enter the price +
   *_Example:_* `39.99`
-|====
+|===
