--- a/docs/de-de/modules/business-entscheidungen/partials/schluesselfeld.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/schluesselfeld.adoc
@@ -1,3 +1,3 @@
 === Schlüsselfeld
 
-Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach einem oder mehreren plentymarkets Datenfeldern. Wähle einen der folgenden Vergleichsoperatoren aus und dann die gewünschten Datenfelder (icon:check-square[role="blue"]).
+Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach einem oder mehreren plentymarkets Datenfeldern. Wähle einen der folgenden Vergleichsoperatoren aus und dann die gewünschten Datenfelder (material:check_box[role=skyBlue]).
