--- a/docs/en-gb/modules/business-decisions/partials/from-type.adoc
+++ b/docs/en-gb/modules/business-decisions/partials/from-type.adoc
@@ -1,3 +1,3 @@
 === From type
 
-Filters the selected key figure and dimension additionally by one or several types. Select one of the following comparison operators and then the desired types (icon:check-square[role="blue"]).
+Filters the selected key figure and dimension additionally by one or several types. Select one of the following comparison operators and then the desired types (material:check_box[role=skyBlue]).
