--- a/docs/en-gb/modules/business-decisions/partials/referrer.adoc
+++ b/docs/en-gb/modules/business-decisions/partials/referrer.adoc
@@ -1,3 +1,3 @@
 === Referrer
 
-Filters the selected key figure and dimension additionally by one or several referrers {filtered-data}. Select one of the following comparison operators and then the desired referrers (icon:check-square[role="blue"]).
+Filters the selected key figure and dimension additionally by one or several referrers {filtered-data}. Select one of the following comparison operators and then the desired referrers (material:check_box[role=skyBlue]).
