--- a/docs/de-de/modules/business-entscheidungen/partials/plentyBI-rohdaten-aktivieren.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/plentyBI-rohdaten-aktivieren.adoc
@@ -3,7 +3,7 @@
 --
 
 . Öffne das Menü *Einrichtung » plentyBI » Rohdaten*.
-. Aktiviere (icon:toggle-on[role="green"]) alle notwendigen Daten. Dadurch können ggf. Kosten entstehen.
+. Aktiviere (material:toggle_on[role=green]) alle notwendigen Daten. Dadurch können ggf. Kosten entstehen.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 --
