--- a/docs/en-gb/modules/business-decisions/partials/plentyBI-activate-raw-data.adoc
+++ b/docs/en-gb/modules/business-decisions/partials/plentyBI-activate-raw-data.adoc
@@ -3,7 +3,7 @@
 --
 
 . Go to *Setup » plentyBI » Raw data*.
-. Activate (icon:toggle-on[role="green"]) all required data. This may result in costs.
+. Activate (material:toggle_on[role=green]) all required data. This may result in costs.
 . *Save* (icon:save[role="green"]) the settings.
 
 --
