Added complex mapping for condition

--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -36,9 +36,12 @@ Dieses Datenfeld wird automatisch zugeordnet.
 
 | Zustand
 | ja
-a| Der Zustand der Variante.
+a| Der Zustand der Variante. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast, in diesem Fall sind das die Artikelzustände von Kaufland. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu, in diesem Fall musst du eine Eigenschaft verwenden. +
+Bei *Zustand* wählst du also zunächst den Zustand von Kaufland und ordnest dann eine Eigenschaft zu. +
 
-* Eigenschaft des Typs *Text* oder *Auswahl*, mögliche Werte: NEW, USED&#95;&#95;&#95;AS&#95;NEW, USED&#95;&#95;&#95;VERY&#95;GOOD, USED&#95;&#95;&#95;GOOD, USED&#95;&#95;&#95;ACCEPTABLE
+empfohlene Zuordnung:
+
+* Eigenschaft des Typs *Auswahl*
 
 | Verkaufspreis
 | ja
