--- a/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
@@ -577,7 +577,7 @@ Click on *Update order packages* (material:refresh[]) to update the data in the 
 
 Click on *Configure columns* (material:settings[]) to deactivate the columns that are already shown in the overview.
 
-In the beginning of the line of the package, click on *Delete package* (material:delete[]) to delete individual packages. A window opens and you need to confirm your decision.  
+At the end of the line of the package, click on *Delete package* (material:delete[]) to delete individual packages. A window opens and you need to confirm your decision.  
 
 A detailed description about the shipping packages can be found further down on this page in the <<#edit-shipping-package, Editing a shipping package>> chapter.
 
