--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -38,7 +38,8 @@ For each marketplace data field, you have the following mapping options. These m
   * *1:1 mapping with fallback data fields*
   * *1:n mapping*
   * *Own value mapping*
-. Save (terra:save[]) the catalogue. +
+  * *Mapping with mathematical calculations*
+. Save (terra:save[role="darkGrey"]) the catalogue. +
 → The mappings are saved.
 
 [.collapseBox]
@@ -133,16 +134,46 @@ image::markets:gif-catalogue-mapping-complex-en.gif[]
 --
 
 [.collapseBox]
-.*1:1 mapping with fallback data fields* 1 marketplace data field, 1 plentymarkets data field with alternatives
+.*1:1 mapping with fallback data fields:* 1 marketplace data field, 1 plentymarkets data field with alternative(s)
 --
 
-In a 1:1 mapping with one or more fallback data fields, you map a plentymarkets data field to the marketplace data field. In addition, you specify one or more fallback data fields. This ensures that the system keeps looking if the first plentymarkets data field is empty or contains an invalid value.
+In a 1:1 mapping with one or more fallback data fields, you map a plentymarkets data field to the marketplace data field. In addition, you specify one or more fallback data fields. This ensures that the system keeps looking if the first plentymarkets data field is missing or empty.
 
 So this mapping specifies:
 
-* I want to fill this marketplace data field with the data from this plentymarkets setting.
-* If that data field is empty or invalid for a variation, the first fallback data field is checked and the value of that fallback data field is exported instead.
-* If the first fallback data field is also empty or invalid for a variation, the value of the second fallback data field is exported and so on.
+* I want to fill the marketplace data field with the data from the selected plentymarkets setting.
+* If that data field is missing or empty for a variation, the first fallback data field is checked. The value of that fallback data field is exported instead.
+* If the first fallback data field is also missing or empty for the variation, the second fallback data field is checked. If a value is found, the value of the second fallback data field is exported for the variation etc.
+
+Two separate fallback conditions are available:
+
+[cols="1,4a"]
+|===
+
+| *Null (Standard)*
+| The fallback data field is used if the data field above is mapped in the catalogue but not linked to the variation.
+
+The condition "Null" is useful when you want to map fallback data fields for the following types of plentymarkets data fields:
+
+* SKU
+* Barcodes
+* Sales prices
+* Properties
+
+*_Important:_* When you add a fallback data field, the fallback condition "null" is selected automatically. To apply the fallback condition "leer", you need to change the default setting.
+
+| *Empty*
+| The fallback data field is used if the data field above is mapped in the catalogue and linked to the variation, but is empty.
+
+The condition "Empty" is useful when you want to map fallback data fields for the following type of plentymarkets data fields:
+
+* plentymarkets data fields that are available for variations by default
+
+*_Important:_* When you add a fallback data field, the fallback condition "null" is selected automatically. To apply the fallback condition "leer", you need to change the default setting.
+
+|===
+
+*_Note:_* Even if you assign one or more fallback data fields, the value of only one of those fields is exported. For each variation, the mapped plentymarkets data fields are checked in the order in which you mapped them. This means that if the first data field does not provide a value for a variation, the first fallback data field is exported etc.
 
 [.instruction]
 Creating a 1:1 mapping with fallback data fields:
@@ -155,13 +186,25 @@ Creating a 1:1 mapping with fallback data fields:
 . Click on the plus to the right of the plentymarkets data field you want to select. +
 → The plentymarkets data field is added to the right.
 . In the list of plentymarkets data fields, click on the plus icon next to the plentymarkets data field that you want to map. +
-→ The fallback data field is exported when the first data field does not exist or is empty. +
-*_Note:_* Even if you assign one or more fallback data fields, the value of only one of those fields is exported. For each variation, the mapped plentymarkets data fields are checked in the order in which you mapped them. This means that if the first data field does not provide a value for a variation, the first fallback data field is exported etc.
-. Click on *Confirm*.
+→ The fallback data field is added with the fallback condition "null".
+. *_Alternative 1:_* To add the fallback data field with the fallback condition "null":
+.. Click on *Confirm*. +
+→ The fallback data field is exported if the data field above is not linked to the variation.
+. *_Alternative 2:_* To add the fallback data field with the fallback condition "empty":
+.. To the left of the fallback data field, click on the cog (icon:cog[role="darkGrey"]). +
+→ The window *Data column settings* is shown.
+.. For the setting *Fallback condition*, select the option *Empty*.
+.. Click on *Save*. +
+→ The fallback data field is added with the fallback condition "empty".
+.. Click on *Confirm*. +
+→ The fallback data field is exported if the data field above is empty for the variation.
 
-*_Example:_* Fallback data field for SKU for Otto Market
+[.instruction]
+_Example:_ Fallback data field for SKU for Otto Market
 
-This gif shows you how to map the plentymarkets data field *SKU* and the fallback data field *Variation ID* to the marketplace data field *SKU* for Otto Market:
+This GIF shows you the mapping for the OTTO Market marketplace data field *SKU*.The plentymarkets data field *SKU* is mapped to this marketplace data field.The plentymarkets data field *Variation ID* is mapped as the fallback data field.The fallback condition "null" is applied automatically.
+
+*_Result:_* The fallback data field *Variation ID* is exported if the data field *SKU* is not linked to the variation.
 
 image::markets:gif-catalogue-mapping-fallback-en.gif[]
 //end::fallback-mappings-config[]
@@ -195,7 +238,7 @@ Creating a 1:n mapping:
 . To the very right of the row, click on *Settings* (icon:cog[]).
 . Select a separator from the drop-down list *Separator* or add a custom separator.
 . Click on *Save*.
-. Save (terra:save[]) the catalogue. +
+. Save (terra:save[role="darkGrey"]) the catalogue. +
 → The mappings are saved. +
 → During the export, the content of the plentymarkets data fields is combined and exported as one field.
 //end::1-to-n-mappings-config[]
